For Character Powers Info/Rules/Quick Guide, I changed the css a bit, to avoid using align-items/justify content center, because when the width is too small, overflow-x happens and it cuts off text at the left-hand side.

--- a/frontend/src/components/MenuBarBoxComponents/CharacterPowers/CharacterPowers.css
+++ b/frontend/src/components/MenuBarBoxComponents/CharacterPowers/CharacterPowers.css
@@ -5,7 +5,9 @@
 
 	display: flex;
 	flex-direction: column;
-	align-items: center;
+	/*align-items: center; 
+	don't use this cause it causes weird behavior with 
+	overflow-x, where things are cut off at the beginning*/
 
 	overflow: auto;
 
@@ -15,7 +17,14 @@
 }
 
 
+.power-info-menu-component-container a {
+	align-self: center;
+}
+
+
 .power-info-character-header {
+
+	align-self: center;
 
 	font-size: 200%;
 	font-weight: bold;
